// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field should render Checkbox input 1`] = `
<div
  class="root"
>
  <label
    for="test"
  >
    test
  </label>
  <input
    id="test"
    type="checkbox"
  />
</div>
`;

exports[`Field should render Number input 1`] = `
<div
  class="root"
>
  <label
    for="test"
  >
    test
  </label>
  <input
    id="test"
    type="number"
    value=""
  />
</div>
`;

exports[`Field should render RadioGroup input 1`] = `
<div
  class="root"
>
  <label
    for="test"
  >
    test
  </label>
  <div>
    <span>
      <input
        id="test"
        type="radio"
        value="test1"
      />
      test1
    </span>
    <span>
      <input
        id="test"
        type="radio"
        value="test2"
      />
      test2
    </span>
    <span>
      <input
        id="test"
        type="radio"
        value="test3"
      />
      test3
    </span>
  </div>
</div>
`;

exports[`Field should render Text input 1`] = `
<div
  class="root"
>
  <label
    for="test"
  >
    test
  </label>
  <input
    id="test"
    type="text"
    value=""
  />
</div>
`;

exports[`Field should render Textarea input 1`] = `
<div
  class="root"
>
  <label
    for="test"
  >
    test
  </label>
  <textarea
    id="test"
    title="test"
  />
</div>
`;
